--- a/pandemic-ui/src/css/App.css
+++ b/pandemic-ui/src/css/App.css
@@ -1,16 +1,28 @@
-.App {
-  text-align: center;
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#root {
   display: flex;
+  flex-direction: column;
+  background-color: #282c34;
+  color: white;
+}
+
+.App {
+  display: flex;
+  flex-grow: 1;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+
+.App-main {
+  margin-top: 5rem;
+  flex-grow: 1;
 }
 
 @keyframes App-logo-spin {
