--- a/pandemic-ui/src/css/App.css
+++ b/pandemic-ui/src/css/App.css
@@ -1,6 +1,8 @@
 html,
 body,
-#root {
+#root,
+.App,
+.App-main {
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -15,15 +17,9 @@ body,
 
 .App {
   display: flex;
-  flex-grow: 1;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-
-.App-main {
-  margin-top: 5rem;
-  flex-grow: 1;
 }
 
 @keyframes App-logo-spin {
