--- a/pandemic-ui/src/css/Game.css
+++ b/pandemic-ui/src/css/Game.css
@@ -1,9 +1,14 @@
 .Game {
-  height: 100%;
-  width: 100%;
   display: flex;
-  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.GameMapContainer {
+  flex: 1;
+  min-width: 0;
+  display: flex;
   align-items: center;
   justify-content: center;
-  box-sizing: border-box;
 }
