--- a/pandemic-ui/src/css/Map.css
+++ b/pandemic-ui/src/css/Map.css
@@ -17,16 +17,22 @@
   background-repeat: no-repeat;
 }
 
+.Connections {
+  z-index: 0;
+  opacity: 0.5;
+}
+
 .City {
+  z-index: 1;
   position: absolute;
-  height: 2em;
-  width: 2em;
+  height: 1.5em;
+  width: 1.5em;
   border-radius: 50%;
   transform: translate(-50%, -50%);
   text-wrap: nowrap;
   text-align: center;
   opacity: 0.5;
-  font-size: 8px;
+  font-size: 10px;
 }
 
 .City:hover {
