--- a/pandemic-ui/src/css/Map.css
+++ b/pandemic-ui/src/css/Map.css
@@ -40,9 +40,16 @@
 }
 
 .City-label {
+  color: white;
   white-space: nowrap;
   text-align: center;
   position: absolute;
+}
+
+.City-players {
+  color: white;
+  white-space: nowrap;
+  text-align: center;
 }
 
 .bottom {
