--- a/pandemic-ui/src/css/PlayersSidebar.css
+++ b/pandemic-ui/src/css/PlayersSidebar.css
@@ -8,8 +8,9 @@
 
 .player-controls {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   height: 10rem;
   width: 10rem;
   border-radius: 0.5rem;
