--- a/pandemic-ui/src/css/PlayersSidebar.css
+++ b/pandemic-ui/src/css/PlayersSidebar.css
@@ -15,3 +15,14 @@
   width: 10rem;
   border-radius: 0.5rem;
 }
+
+.PlayerHand {
+  display: flex;
+  font-size: 12px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.PlayerHand-card {
+  padding: .5em;
+}
