--- a/pandemic-ui/src/css/Map.css
+++ b/pandemic-ui/src/css/Map.css
@@ -31,7 +31,7 @@
   transform: translate(-50%, -50%);
   text-wrap: nowrap;
   text-align: center;
-  opacity: 0.5;
+  opacity: .75;
   font-size: 10px;
 }
 
