--- a/pandemic-ui/src/css/Map.css
+++ b/pandemic-ui/src/css/Map.css
@@ -11,7 +11,8 @@
   position: relative;
   width: 100%;
   aspect-ratio: 2/1;
-  background: linear-gradient(rgba(40, 44, 52, 0.6), rgba(40, 44, 52, 0.6)), url('../../public/map.png');
+  background: linear-gradient(rgba(40, 44, 52, 0.6), rgba(40, 44, 52, 0.6)),
+    url('../../public/map.png');
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -30,7 +31,7 @@
   transform: translate(-50%, -50%);
   text-wrap: nowrap;
   text-align: center;
-  opacity: .75;
+  opacity: 0.75;
   font-size: 10px;
 }
 
@@ -52,7 +53,7 @@
 }
 
 .bottom {
-  top: 125%
+  top: 125%;
 }
 
 .top {
@@ -60,7 +61,7 @@
 }
 
 .left {
-  right: 125%
+  right: 125%;
 }
 
 .right {
@@ -68,11 +69,11 @@
 }
 
 .City-infections {
-  line-height:3em;
+  line-height: 3em;
   margin: 0.5em;
   padding: 0.5em;
 }
 
-[style*="background-color: yellow"] {
+[style*='background-color: yellow'] {
   color: black;
 }
