--- a/pandemic-ui/src/css/NewGame.css
+++ b/pandemic-ui/src/css/NewGame.css
@@ -11,7 +11,8 @@
   color: #333;
 }
 
-.new-game-form, .player-setup-form {
+.new-game-form,
+.player-setup-form {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -35,7 +36,8 @@
   font-size: 1rem;
 }
 
-.setup-players-button, .start-button {
+.setup-players-button,
+.start-button {
   padding: 0.75rem 1.5rem;
   background-color: #4caf50;
   color: white;
