--- a/pandemic-ui/src/css/Actions.css
+++ b/pandemic-ui/src/css/Actions.css
@@ -20,3 +20,10 @@
   flex-wrap: wrap;
   gap: 8px;
 }
+
+.ColorSelect {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-bottom: 16px;
+}
