[new] add queue preview

--- a/pandemic-ui/src/css/GameState.css
+++ b/pandemic-ui/src/css/GameState.css
@@ -14,6 +14,12 @@
   gap: 0.5em;
 }
 
+.GameState-queue {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+
 .InfectionRate {
   display: flex;
   align-items: center;
@@ -26,4 +32,29 @@
   align-items: center;
   justify-content: center;
   gap: 0.5em;
+}
+
+.GamePlayQueue {
+  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.GamePlayQueue-title {
+  margin: 0;
+}
+
+.GamePlayQueue-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em;
+  list-style: none;
+}
+
+.GamePlayQueue-playerItem {
+  padding: 0.25em;
+  border-radius: 0.25em;
 }
