--- a/pandemic-ui/src/css/index.css
+++ b/pandemic-ui/src/css/index.css
@@ -1,3 +1,16 @@
+@import './Actions.css';
+@import './App.css';
+@import './Button.css';
+@import './Game.css';
+@import './GameState.css';
+@import './Home.css';
+@import './Map.css';
+@import './Modal.css';
+@import './Navigation.css';
+@import './NewGame.css';
+@import './PlayersSidebar.css';
+@import './Tooltip.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
