--- a/pandemic-ui/src/css/App.css
+++ b/pandemic-ui/src/css/App.css
@@ -1,3 +1,4 @@
+/* --- App --- */
 html,
 body,
 #root,
@@ -45,4 +46,23 @@ body,
 
 [style*='background-color: blue'] {
   color: white;
+}
+
+/* --- Game --- */
+.Game {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.Game-vertical {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+/* --- Home --- */
+.Home {
+  padding: 4em;
 }
