--- a/pandemic-ui/src/css/Map.css
+++ b/pandemic-ui/src/css/Map.css
@@ -1,3 +1,4 @@
+/* --- Map --- */
 .Map {
   width: 100%;
   height: 100%;
@@ -18,10 +19,12 @@
   background-repeat: no-repeat;
 }
 
+/* --- Connections --- */
 .Connections {
   z-index: 0;
 }
 
+/* --- City --- */
 .City {
   z-index: 1;
   position: absolute;
@@ -68,7 +71,8 @@
   left: 125%;
 }
 
-.City-infections {
+/* --- Infection --- */
+.City .Infection {
   line-height: 3em;
   margin: 0.5em;
   padding: 0.5em;
