--- a/pandemic-ui/src/css/index.css
+++ b/pandemic-ui/src/css/index.css
@@ -1,15 +1,11 @@
-@import './Actions.css';
-@import './App.css';
-@import './Button.css';
-@import './Game.css';
-@import './GameState.css';
-@import './Home.css';
-@import './Map.css';
-@import './Modal.css';
-@import './Navigation.css';
-@import './NewGame.css';
-@import './PlayersSidebar.css';
-@import './Tooltip.css';
+@import './actions.css';
+@import './app.css';
+@import './components.css';
+@import './game-state.css';
+@import './map.css';
+@import './navigation.css';
+@import './new-game.css';
+@import './players.css';
 
 body {
   margin: 0;
