--- a/pandemic-ui/src/css/index.css
+++ b/pandemic-ui/src/css/index.css
@@ -2,6 +2,7 @@
 @import './app.css';
 @import './components.css';
 @import './game-state.css';
+@import './load-game.css';
 @import './map.css';
 @import './navigation.css';
 @import './new-game.css';
