style[Rules]: fix scrolling

--- a/pandemic-ui/src/css/App.css
+++ b/pandemic-ui/src/css/App.css
@@ -66,3 +66,10 @@ body,
 .Home {
   padding: 4em;
 }
+
+/* --- Rules --- */
+.Rules {
+  max-height: 100%;
+  overflow-y: auto;
+  padding: 0 100px;
+}
