--- a/pandemic-ui/src/css/index.css
+++ b/pandemic-ui/src/css/index.css
@@ -1,17 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@import './actions.css';
-@import './app.css';
-@import './components.css';
-@import './game-state.css';
-@import './load-game.css';
-@import './map.css';
-@import './navigation.css';
-@import './new-game.css';
-@import './players.css';
-@import './rules.css';
+@import "tailwindcss";
 
 body {
   margin: 0;
