style[Map]: fix some city label positions

--- a/pandemic-ui/public/index.css
+++ b/pandemic-ui/public/index.css
@@ -235,6 +235,9 @@
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
+  .-right-1 {
+    right: calc(var(--spacing) * -1);
+  }
   .-right-2 {
     right: calc(var(--spacing) * -2);
   }
